language/move-lang/tests/move_check/borrows/move_field_invalid.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/move_field_invalid.move:13:9
   │
12 │         let f = &s.f;
   │                 ---- It is still being borrowed by this reference
13 │         move s;
   │         ^^^^^^ Invalid move of local 's'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/move_field_invalid.move:18:9
   │
17 │         let f = &mut s.f;
   │                 -------- It is still being mutably borrowed by this reference
18 │         move s;
   │         ^^^^^^ Invalid move of local 's'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/move_field_invalid.move:23:9
   │
22 │         let f = id(&s.f);
   │                 -------- It is still being borrowed by this reference
23 │         move s;
   │         ^^^^^^ Invalid move of local 's'

error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_check/borrows/move_field_invalid.move:28:9
   │
27 │         let f = id_mut(&mut s.f);
   │                 ---------------- It is still being mutably borrowed by this reference
28 │         move s;
   │         ^^^^^^ Invalid move of local 's'

